[feature] Menu Bar

--- a/styles.css
+++ b/styles.css
@@ -233,6 +233,7 @@ body {
 
 .input-cell:hover {
     border: 1.5px solid blue;
+    cursor: cell;
 }
 
 .input-cell.selected {
@@ -253,4 +254,26 @@ body {
 
 .input-cell.right-selected {
     border-right: 1px solid #e5e5e5;
+}
+
+.menu-icon.selected {
+    background-color: #e5e5e5;
+}
+
+#fill-color {
+    border-bottom: 4px solid #ffffff;
+    padding-bottom: 2px;
+}
+
+#text-color {
+    border-bottom: 4px solid #000000;
+    padding-bottom: 2px;
+}
+
+.pick-color {
+    -webkit-transition: all linear .2s;
+    -moz-transition: all linear .2s;
+    -ms-transition: all linear .2s;
+    -o-transition: all linear .2s;
+    transition: all linear .2s;
 }
