--- a/styles.css
+++ b/styles.css
@@ -277,3 +277,65 @@ body {
     -o-transition: all linear .2s;
     transition: all linear .2s;
 }
+
+.sheet-bar {
+    display: flex;
+    flex-direction: row;
+    height: 4vh;
+    width: 100%;
+    align-items: center;
+}
+
+.sheet-scroll {
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.sheets-tab {
+    display: flex;
+    flex-direction: column;
+    border-left: 0.5px solid #e5e5e5;
+    overflow: scroll;
+}
+
+.sheets-tab::-webkit-scrollbar {
+    display: none;
+}
+
+.sheets-tab {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.sheet {
+    display: flex;
+    justify-content: center;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 6px;
+    height: 4vh;
+    border-right: 0.5px solid #e5e5e5;
+    font-weight: 600;
+    font-size: 15px;
+}
+
+.sheet.selected {
+    color: #006a4e;
+    border-bottom: 5px solid #006a4e;
+}
+
+.sheet:hover {
+    background-color: #e5e5e5;
+    cursor: pointer;
+}
+
+.sheet.selected:hover {
+    background-color: #ffffff;
+    cursor: default;
+}
+
+.add-sheet {
+    color: #006a4e;
+    margin-right: 10px;
+}
