--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
     background-color: #ffffff;
     color: #000000;
     font-family: 'Raleway', sans-serif;
+    position: relative;
 }
 
 .title-bar {
@@ -294,7 +295,7 @@ body {
 
 .sheets-tab {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     border-left: 0.5px solid #e5e5e5;
     overflow: scroll;
 }
@@ -338,4 +339,23 @@ body {
 .add-sheet {
     color: #006a4e;
     margin-right: 10px;
+}
+
+.sheet-options-modal {
+    position: absolute;
+    background-color: #ffffff;
+    bottom: 4vh;
+    left: 200px;
+    -webkit-box-shadow: -1px 14px 14px 2px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: -1px 14px 14px 2px rgba(0, 0, 0, 0.05);
+    box-shadow: -1px 14px 14px 2px rgba(0, 0, 0, 0.05);
+}
+
+.option {
+    padding: 7px 15px 7px 15px;
+}
+
+.option:hover {
+    background-color: #e5e5e5;
+    cursor: pointer;
 }
