--- a/styles.css
+++ b/styles.css
@@ -171,14 +171,27 @@ body {
 #select-all {
     width: 26px;
     height: 25px;
-    border: 1px solid #999999;
-    background-color: #999999;
+    /* border: 1px solid #999999; */
+    border-right: 1px solid #d3d3d3;
+    background-color: #e5e5e5;
+    position: relative;
+}
+
+.widget {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 0;
+    height: 0;
+    margin-bottom: 2px;
+    margin-right: 2px;
+    border-right: 20px solid #817f7f;
+    border-top: 20px solid transparent;
 }
 
 #columns {
     height: 25px;
     width: calc(100vw - 26px);
-    /* border-top: 1px solid #d3d3d3; */
     display: flex;
     flex-direction: row;
     overflow: hidden;
